[metadata]
name = ommle
version = attr: ommle.__version__
description = ONNX Model's Middle-Layer Extractor
long_description = file: README.md
long_description_content_type = text/markdown
license = 
license_file = LICENSE
url = 

[options]
package_dir=
	=ommle
packages=find:
install_requires=
	onnx

[options.packages.find]
where=ommle

